--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "icons:generate": "node scripts/generate-icons.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "multer": "^2.0.2",
     "next": "15.5.4",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
